syntax = "proto3";

option java_multiple_files = true;
option java_package = "billboard.service";
option java_outer_classname = "ResumeProto";

package resume;

service Resume {
  rpc status(ResumeStatusRequest) returns (ResumeReply) {}
  rpc check(ResumeCheckRequest) returns (ResumeReply) {}
}

message ResumeStatusRequest {
  string status = 1;
  uint32 id = 2;
  string uuid = 3;
}

message ResumeCheckRequest {
  uint32 id = 1;
  string uuid = 2;
}

message ResumeReply { string data = 1; }
